# wireman

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/: ci.yml  dependabot.yml
.github/workflows/: cd.yaml  ci.yml  website.yml
example/: .gitignore  wireman.toml
example/config_dracula/: wireman.toml
example/configs/default/: wireman.toml
example/configs/dracula/: wireman.toml
example/configs/empty/: wireman.toml
example/configs/website/: wireman.toml
example/grpc_simple/: debugger.proto  go.mod  go.sum  main.go  productfinder.proto  timekeeper.proto
example/server/reflection/: Makefile  debugger.proto  go.sum  main.go  order.proto
example/server/simple/: Makefile  greeter.proto  test.proto
example/server/streaming/: Makefile  main.go  streaming.proto
example/server/streaming/proto/: streaming.pb.go  (+1 more)
example/server/website/: Makefile  README.md  go.mod  go.sum  main.go
example/tape/: demo.tape  reflection.tape  streaming.tape  website.tape
prototui-app/: Cargo.toml  config.json
prototui-app/src/: app.rs  commons.rs  main.rs  theme.rs
prototui-app/src/commons/: editor.rs  mod.rs
prototui-app/src/controller/: address.rs  editor.rs  list_with_children.rs  messages.rs  metadata.rs  mod.rs  request.rs  selection.rs
prototui-app/src/model/: address.rs  analyzer.rs  core_client.rs  editor.rs  list_with_children.rs  messages.rs  metadata.rs  mod.rs  request.rs  selection.rs
prototui-app/src/pages/: config.rs  home.rs  mod.rs
prototui-app/src/view/: address.rs  config.rs  editor.rs  list_with_children.rs  messages.rs  metadata.rs  mod.rs  request.rs  selection.rs
prototui-app/src/widgets/: key_value.rs  list_with_children.rs  mod.rs
prototui-core/: Cargo.toml  config.json
prototui-core/src/: config.rs  error.rs  lib.rs  main.rs
prototui-core/src/client/: codec.rs  mod.rs  tls.rs
prototui-core/src/descriptor/: message.rs  mod.rs  request.rs  response.rs
prototui-core/src/descriptor/message/: grpcurl.rs  ser.rs
prototui-core/test_files/: test.proto
stellarpc-app/: Cargo.toml  config.json
stellarpc-app/src/: app.rs  config.rs  controller.rs  input.rs  main.rs  term.rs  theme.rs  ui.rs  view.rs
stellarpc-app/src/commons/: debug.rs  editor.rs  mod.rs
stellarpc-app/src/controller/: address.rs  messages.rs  metadata.rs  mod.rs  selection.rs
stellarpc-app/src/model/: address.rs  core_client.rs  headers.rs  history.rs  messages.rs  metadata.rs  mod.rs  request.rs  selection.rs
stellarpc-app/src/model/headers/: auth.rs  meta.rs
stellarpc-app/src/pages/: config.rs  home.rs  mod.rs
stellarpc-app/src/view/: address.rs  headers.rs  help.rs  history.rs  messages.rs  metadata.rs  mod.rs  root.rs  selection.rs  theme.rs  util.rs
stellarpc-app/src/widgets/: key_value.rs  kv.rs  list.rs  list_with_children.rs  mod.rs  tabs.rs
stellarpc-config/: Cargo.toml
stellarpc-config/src/: config.rs  error.rs  lib.rs
stellarpc-core/: Cargo.toml  config.json
stellarpc-core/src/: config.rs  error.rs  lib.rs  main.rs
stellarpc-core/src/client/: codec.rs  grpcurl.rs  mod.rs  tls.rs
stellarpc-core/src/descriptor/: message.rs  metadata.rs  mod.rs  request.rs  response.rs
stellarpc-core/src/descriptor/message/: grpcurl.rs  template.rs
stellarpc-core/src/features/: grpcurl.rs  mod.rs
stellarpc-core/test_files/: recursive.proto  test.proto
test_utils/grpc_simple/: Makefile  README.md  debugger.proto  go.mod  main.go  timekeeper.proto
test_utils/grpc_simple/proto/: greeter.pb.go  greeter_grpc.pb.go  productfinder.pb.go  productfinder_grpc.pb.go  timekeeper.pb.go  timekeeper_grpc.pb.go
tui-key-event-handler/: Cargo.toml
tui-key-event-handler/src/: crossterm.rs  key_event.rs  lib.rs
website/: .prettierrc  README.md  package-lock.json  package.json  svelte.config.js
website/src/lib/: BinariesTable.svelte  CodeContainer.svelte  ContentCard.svelte  GithubButton.svelte  ImageShow.svelte  MoreFeatures.svelte  Tour.svelte
website/src/routes/: +layout.svelte  +page.svelte
wireman/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.json  config.toml
wireman-config/: Cargo.toml  config.toml
wireman-config/src/: cli.rs  config.rs  error.rs  init.rs  install.rs  lib.rs  main.rs  setup.rs  theme.rs
wireman-core/: .gitignore  Cargo.toml  config.json
wireman-core/examples/: list.rs  metadata.rs  reflection.rs  streaming.rs
wireman-core/src/: error.rs  main.rs
wireman-core/src/client/: mod.rs  reflection.rs  tls.rs
wireman-core/src/client/reflection/: v1.rs  v1alpha.rs
wireman-core/src/descriptor/: mod.rs  reflection_request.rs  request.rs  response.rs
wireman-core/src/descriptor/message/: template.rs
wireman-core/src/features/: grpcurl.rs
wireman-core/test_files/: oneof.proto
wireman-event-handler/: Cargo.toml
wireman-event-handler/src/: crossterm.rs  key_event.rs  lib.rs
wireman-logger/: Cargo.toml
wireman-logger/src/: lib.rs
wireman-theme/: Cargo.toml
wireman-theme/assets/: default.toml  dracula.toml  one-dark-pro.toml  transparent.toml
wireman-theme/examples/: parse.rs
wireman-theme/resources/skins/: dracula.toml  neon.toml
wireman-theme/resources/test/: default.toml
wireman-theme/src/: color.rs  config.rs  lib.rs  skin.rs  theme.rs
wireman/src/: app.rs  context.rs  events.rs  input.rs  main.rs  term.rs  theme.rs  view.rs
wireman/src/commons/: debug.rs  editor.rs  mod.rs
wireman/src/events/: configuration.rs  handler.rs  headers.rs
wireman/src/events/messages/: request.rs  response.rs
wireman/src/events/selection/: methods.rs  methods_search.rs  mod.rs  reflection.rs  services.rs  services_search.rs
wireman/src/model/: configuration.rs  core_client.rs  headers.rs  history.rs  messages.rs  mod.rs  reflection.rs  selection.rs
wireman/src/model/headers/: auth.rs  meta.rs
wireman/src/view/: configuration.rs  editor.rs  headers.rs  help.rs  history_tab.rs  messages.rs  reflection_dialog.rs  root.rs  selection.rs  theme.rs  util.rs
wireman/src/view/theme/: tailwind.rs
wireman/src/widgets/: editor.rs  help.rs  kv.rs  list.rs  mod.rs  modal.rs  tabs.rs
(+9 files in other folders)
