[package]
name = "prototui_app"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "A TUI based gRPC client"
repository = "https://github.com/preiter93/prototui"
keywords = ["gRPC", "proto", "TUI"]
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "prototui_core", path = "../prototui-core", version = "0.1.0" }
crossterm = "0.26"
ratatui = "0.20"
tui-textarea = {git = "https://github.com/rhysd/tui-textarea", branch = "main", default-features = false, features = ["search", "ratatui-your-backend", "ratatui-crossterm"] }
serde_json = "1.0"
unicode-width = "0.1"
http = "0.2"
tui-widget-list = "0.2.2"
