[package]
name = "stellarpc_config"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Config for stellarpc-app"
repository = "https://github.com/preiter93/stellarpc"
keywords = ["gRPC", "proto", "TUI"]
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
