[package]
name = "stellarpc_core"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Core library for stellarpc-app"
repository = "https://github.com/preiter93/stellarpc"
keywords = ["gRPC", "proto", "TUI"]
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
prost = "0.11"
prost-build = "0.11"
prost-types = "0.11"
protox = "0.3"
http = "0.2"

[dependencies.prost-reflect]
version = "0.11"
features = ["serde", "text-format"]

[dependencies.tokio]
version = "1.27"
features = ["rt-multi-thread", "sync", "fs"]

[dependencies.tonic]
version = "0.9"

[dependencies.rustls]
version = "0.20.6"
features = ["dangerous_configuration"]

[dependencies.rustls-pemfile]
version = "1.0"

[dependencies.hyper]
version = "0.14.20"
features = ["client", "http2"]

[dependencies.hyper-rustls]
version = "0.23.0"
features = ["default", "http2"]
