[package]
name = "wireman-config"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Config for wireman"
repository = "https://github.com/preiter93/wireman"
keywords = ["gRPC", "proto", "TUI"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
logger = { package = "wireman-logger", path = "../wireman-logger", version = "0.1.0" }
theme = { package = "wireman-theme", path = "../wireman-theme", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.0"
thiserror = "1.0"
toml = "0.8.10"
