[package]
name = "wireman-config"
version = "0.2.3"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Config for wireman"
repository = "https://github.com/preiter93/wireman"
keywords = ["wireman", "config"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# logger = { package = "wireman-logger", path = "../wireman-logger", version = "0.1.0" }
# theme = { package = "wireman-theme", path = "../wireman-theme", version = "0.2.0" }
logger = { package = "wireman-logger", version = "0.1.0" }
theme = { package = "wireman-theme", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.0"
thiserror = "1.0"
toml = "0.8.10"
