[package]
name = "wireman-core"
version = "0.1.1"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Core for wireman"
repository = "https://github.com/preiter93/wireman"
keywords = ["wireman", "core"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

http = { version = "1" }
protox = { version = "0.7" }
prost-reflect = { version = "0.14.2", features = ["serde", "text-format"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }

[[example]]
name = "metadata"
