[package]
name = "wireman-core"
version = "0.1.6"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Core for wireman"
repository = "https://github.com/preiter93/wireman"
keywords = ["wireman", "core"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

http = { version = "1" }
protox = { version = "0.9" }
prost-reflect = { version = "0.16.3", features = ["serde", "text-format"] }
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }
tokio-stream = {version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
tonic-reflection = { version = "0.14" }

[[example]]
name = "metadata"

[[example]]
name = "reflection"

[[example]]
name = "streaming"
