[package]
name = "wireman-event-handler"
version = "0.3.1"
edition = "2021"
description = "Event handler for wireman"
authors = ["preiter <phil.reiter93@gmail.com>"]
repository = "https://github.com/preiter93/wireman"
keywords = ["wireman", "event", "hander"]
license = "MIT"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
