[package]
name = "wireman-logger"
version = "0.1.0"
edition = "2021"
description = "Logger for wireman"
authors = ["preiter <phil.reiter93@gmail.com>"]
repository = "https://github.com/preiter93/wireman"
keywords = ["wireman", "logger"]
license = "MIT"

[dependencies]
chrono = "0.4.43"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
