[package]
name = "wireman-theme"
version = "0.2.2"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Theme for wireman"
repository = "https://github.com/preiter93/wireman"
keywords = ["wireman", "theme"]
license = "MIT"

[dependencies]
cssparser = "0.33.0"
# logger = { package = "wireman-logger", path = "../wireman-logger", version = "0.1.0" }
logger = { package = "wireman-logger", version = "0.1" }
once_cell = "1.19"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.8.10"

[[example]]
name = "parse"
