[package]
name = "wireman"
version = "0.2.12"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "A TUI based gRPC client"
repository = "https://github.com/preiter93/wireman"
keywords = ["wireman", "ratatui", "grpc", "client", "app"]
readme = "README.md"
license = "MIT"
rust-version = "1.70.0"

[dependencies]
# core = { package = "wireman-core", path = "../wireman-core", version = "0.1" }
# config = { package = "wireman-config", path = "../wireman-config", version = "0.5" }
# logger = { package = "wireman-logger", path = "../wireman-logger", version = "0.1.0" }
# theme = { package = "wireman-theme", path = "../wireman-theme", version = "0.3" }
# event-handler = { package = "wireman-event-handler", path = "../wireman-event-handler", version = "0.2" }

core = { package = "wireman-core", version = "0.1.2" }
config = { package = "wireman-config", version = "0.5.1" }
logger = { package = "wireman-logger", version = "0.1" }
theme = { package = "wireman-theme", version = "0.3.1" }
event-handler = { package = "wireman-event-handler", version = "0.3" }

# tui-widget-list = { version = "0.14", path = "../../tui-widget-list" }
tui-widget-list = { version = "0.14" }
edtui = { version = "0.10.2", default-features = false, features = ["mouse-support", "system-editor"] }
# edtui = { package = "edtui", path = "../../edtui", version = "0.10", default-features = false, features = ["mouse-support", "system-editor"] }
# edtui = { version = "0.10", git = "https://github.com/preiter93/edtui", branch = "tabs" }
crossterm = { version = "0.29", features = ["events", "event-stream"] }
ratatui = { package = "ratatui", version = "0.30", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1"
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
tokio = { version = ">=1.48", features = ["rt", "macros"] }
futures = "0.3"
